test/parserTest/fail/test9.ic
class BadVirtualCall {
	void doThings (string s) {
		Library.println(s);
	}
	
	void main () {
		this.doThings(string s); //type identifier not allowed in method call
	}	
}